<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="onesong">1 song</string>
    <plurals name="Nsongs">
        <item quantity="other"><xliff:g id="count">%d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nsongscomp">
        <item quantity="other"><xliff:g id="count_for_artist">%2$d</xliff:g> of <xliff:g id="total_count">%1$d</xliff:g> songs</item>
    </plurals>
    <plurals name="Nalbums">

        
        <item quantity="one">1 album</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> albums</item>
    </plurals>
    <string name="durationformatshort" translatable="false"><xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false"><xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="goto_start">Library</string>
    <string name="party_shuffle">Party shuffle</string>
    <string name="party_shuffle_off">Party shuffle off</string>
    <string name="party_shuffle_on">Party shuffle on</string>
    <string name="delete_item">Delete</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="play_all">Play all</string>
    <string name="delete_artist_desc">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from the SD card.</string>
    <string name="delete_artist_desc_nosdcard">All songs by <xliff:g id="artist">%s</xliff:g> will be permanently deleted from USB storage.</string>
    <string name="delete_album_desc">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc_nosdcard">The entire album \"<xliff:g id="album">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_song_desc">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from the SD card.</string>
    <string name="delete_song_desc_nosdcard">\"<xliff:g id="song">%s</xliff:g>\" will be permanently deleted from USB storage.</string>
    <string name="delete_confirm_button_text">OK</string>
    <plurals name="NNNtracksdeleted">

        
        <item quantity="one">1 song was deleted.</item>
        
        <item quantity="other"><xliff:g id="songs_to_delete">%d</xliff:g> songs were deleted.</item>
    </plurals>
    <string name="scanning">Scanning SD card\u2026</string>
    <string name="scanning_nosdcard">Scanning USB storage\u2026</string>
    <string name="nowplaying_title">Now playing</string>
    <string name="artists_title">Artists</string>
    <string name="albums_menu">Albums</string>
    <string name="albums_title">Albums</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">Songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="videos_title">Videos</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Artists</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_videos_title">No videos</string>
    <string name="no_playlists_title">No playlists</string>
    <string name="delete_playlist_menu">Delete</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <string name="recentlyadded">Recently added</string>
    <string name="recentlyadded_title">Recently added</string>
    <string name="podcasts_listitem">Podcasts</string>
    <string name="podcasts_title">Podcasts</string>
    <string name="sdcard_missing_title">No SD card</string>
    <string name="sdcard_missing_title_nosdcard">No USB storage</string>
    <string name="sdcard_missing_message">Your phone does not have an SD card inserted.</string>
    <string name="sdcard_missing_message_nosdcard">Your phone does not have USB storage.</string>
    <string name="sdcard_busy_title">SD card unavailable</string>
    <string name="sdcard_busy_title_nosdcard">USB storage unavailable</string>
    <string name="sdcard_busy_message">Sorry, your SD card is busy.</string>
    <string name="sdcard_busy_message_nosdcard">Sorry, your USB storage is busy.</string>
    <string name="sdcard_error_title">SD card error</string>
    <string name="sdcard_error_title_nosdcard">USB storage error</string>
    <string name="sdcard_error_message">An error was encountered on your SD card.</string>
    <string name="sdcard_error_message_nosdcard">An error was encountered on your USB storage.</string>
    <string name="unknown_artist_name">Unknown artist</string>
    <string name="unknown_album_name">Unknown album</string>
    <string name="shuffle_on_notif">Shuffle is on</string>
    <string name="shuffle_off_notif">Shuffle is off</string>
    <string name="repeat_off_notif">Repeat is off</string>
    <string name="repeat_current_notif">Repeating current song</string>
    <string name="repeat_all_notif">Repeating all songs</string>
    <string name="ringtone_menu">Use as phone ringtone</string>
    <string name="ringtone_menu_short">Use as ringtone</string>
    <string name="ringtone_set">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" set as phone ringtone.</string>
    <string name="play_selection">Play</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="queue">Queue</string>
    <string name="new_playlist">New playlist</string>
    <string name="show_all">Show All</string>
    <string name="new_playlist_name_template">New playlist <xliff:g id="number">%d</xliff:g></string>
    <plurals name="NNNtrackstoplaylist">

        
        <item quantity="one">1 song added to playlist.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> songs added to playlist.</item>
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Overwrite</string>
    <string name="service_start_error_title">Playback problem</string>
    <string name="service_start_error_msg">Sorry, the song could not be played.</string>
    <string name="service_start_error_button">OK</string>
    <string-array name="weeklist">
        <item>"1 week"</item>
        <item>"2 weeks"</item>
        <item>"3 weeks"</item>
        <item>"4 weeks"</item>
        <item>"5 weeks"</item>
        <item>"6 weeks"</item>
        <item>"7 weeks"</item>
        <item>"8 weeks"</item>
        <item>"9 weeks"</item>
        <item>"10 weeks"</item>
        <item>"11 weeks"</item>
        <item>"12 weeks"</item>
    </string-array>
    <string name="weekpicker_set">Done</string>
    <string name="weekpicker_title">Set time</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="clear_playlist">Clear playlist</string>
    <string name="musicbrowserlabel">Music</string>
    <string name="musicshortcutlabel">Music playlist</string>
    <string name="mediaplaybacklabel">Music</string>
    <string name="videobrowserlabel">Videos</string>
    <string name="mediapickerlabel">Music</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="cancel">Cancel</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="streamloadingtext">Connecting to <xliff:g id="host">%s</xliff:g></string>
    <string name="mediasearch">Search for <xliff:g id="term" example="Beethoven">%s</xliff:g> using:</string>
    <string name="working_artists">Artists\u2026</string>
    <string name="working_albums">Albums\u2026</string>
    <string name="working_songs">Songs\u2026</string>
    <string name="working_playlists">Playlists\u2026</string>
    <string name="loading">Loading</string>
    <string name="sort_by_track">Tracks</string>
    <string name="sort_by_album">Albums</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Select music track</string>
    <string name="search_settings_description">Artists, albums, and tracks</string>
    <string name="search_hint">Search Music</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="widget_initial_text">Touch to select music.</string>
    <string name="shuffle_extra">Shuffle</string>
    <string name="repeat_extra_one">Repeating one</string>
    <string name="repeat_extra_all">Repeating all</string>
    <string name="repeat_extra">Repeat</string>
    <string name="share">Share track</string>
    <string name="eq">Equalizer</string>
    <string name="shop">Shop the Market</string>
    <string name="shop_min">Shop Market</string>
    <string name="set_ring">Set ringtone</string>
    <string name="delete_track">Delete track</string>
    <string name="audio_cat">Audio</string>
    <string name="ui_cat">UI</string>
    <string name="edit_gesture_summary">Haptic feedback, color picker, define gestures</string>
    <string name="gesture_color_picker_title">Gesture Color Picker</string>
    <string name="gesture_color_picker_summary">Change the color of the gesture overlay</string>
    <string name="define_gestures">Define Gestures</string>
    <string name="shake_action_title_bg">Send to Background</string>
    <string name="shake_action_summary_bg">The Tab action will continue working outside the app</string>
    <string name="customizations_title">Customization</string>
    <string name="customizations_summary">Heavy modification</string>
    <string name="small_np_window_title">Small Now Playing Window</string>
    <string name="small_np_window_summary">Customize smaller now playing window</string>
    <string name="small_np_ui">Small Window UI</string>
    <string name="small_np_ui_summary">Media buttons, text views, font size</string>
    <string name="np_media_play_title">Play and Pause</string>
    <string name="np_media_next_title">Next Track</string>
    <string name="np_media_prev_title">Previous Track</string>
    <string name="np_media_search_title">Search Music</string>
    <string name="np_media_playlist_title">Quick Playlist</string>
    <string name="np_media_market_title">Market Search</string>
    <string name="np_media_share_title">Share Track</string>
    <string name="np_media_album_art_title">Album Art</string>
    <string name="np_media_play_summary">Play and Pause music</string>
    <string name="np_media_next_summary">Play next track</string>
    <string name="np_media_prev_summary">Play previous track</string>
    <string name="np_media_search_summary">Search your music</string>
    <string name="np_media_playlist_summary">Create a Quick Playlist (Playlist tab only)</string>
    <string name="np_media_market_summary">Search Market for currently playing artist</string>
    <string name="np_media_share_summary">Show your current track</string>
    <string name="np_media_album_art_summary">Show album art</string>
    <string name="np_tv">	Small Now Playing Window Text Views</string>
    <string name="np_tv_artist">Artist Name</string>
    <string name="np_tv_album">Album Name</string>
    <string name="np_tv_track">Track Name</string>
    <string name="np_tv_artist_summary">Show artist name</string>
    <string name="np_tv_album_summary">Show album name</string>
    <string name="np_tv_track_summary">Show track name</string>
    <string name="np_font_title">Font Size</string>
    <string name="np_font_dialog_title">Now Playing Window Font Size</string>
    <string name="np_font_summary">Choose your font size for artist, album, and track</string>
    <string name="np_progress_title">Progress bar</string>
</resources>