<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/extra_controls"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@id/album"
    android:layout_gravity="fill_vertical"
    android:visibility="gone"
    android:weightSum="5.0" >

    <LinearLayout
        android:id="@+id/shuffle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:background="@drawable/btn_bg_extra"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/shuffle_extra_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false" />

        <TextView
            android:id="@+id/shuffle_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:gravity="center_horizontal"
            android:shadowColor="#ff111111"
            android:text="@string/shuffle_extra"
            android:textColor="#ffffffff"
            android:textSize="12.0dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/repeat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:background="@drawable/btn_bg_extra"
        android:clickable="true"
        android:gravity="center"
        android:longClickable="true"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/repeat_extra_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false" />

        <TextView
            android:id="@+id/repeat_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:gravity="center_horizontal"
            android:shadowColor="#ff111111"
            android:text="@string/repeat_extra"
            android:textColor="#ffffffff"
            android:textSize="12.0dip"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Landscape -->

    <LinearLayout
        android:id="@+id/shop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:background="@drawable/btn_bg_extra"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/shop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:src="@drawable/ic_market" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:gravity="center_horizontal"
            android:shadowColor="#ff111111"
            android:text="@string/shop_min"
            android:textColor="#ffffffff"
            android:textSize="12.0dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ringtone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:background="@drawable/btn_bg_extra"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/ring_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:src="@drawable/ic_ring" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:gravity="center_horizontal"
            android:shadowColor="#ff111111"
            android:text="@string/set_ring"
            android:textColor="#ffffffff"
            android:textSize="12.0dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_extra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:background="@drawable/btn_bg_extra"
        android:clickable="true"
        android:gravity="center"
        android:longClickable="true"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/share_extra_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:src="@drawable/ic_menu_share" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:gravity="center_horizontal"
            android:shadowColor="#ff111111"
            android:text="@string/share"
            android:textColor="#ffffffff"
            android:textSize="12.0dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/eq_extra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:background="@drawable/btn_bg_extra"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/eq_extra_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:src="@drawable/ic_menu_eq" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:gravity="center_horizontal"
            android:shadowColor="#ff111111"
            android:text="@string/eq"
            android:textColor="#ffffffff"
            android:textSize="12.0dip"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/delete_extra"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:background="@drawable/btn_bg_extra"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:src="@drawable/ic_menu_delete" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.0dip"
            android:gravity="center_horizontal"
            android:shadowColor="#ff111111"
            android:text="@string/delete_track"
            android:textColor="#ffffffff"
            android:textSize="12.0dip"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>